# hearthfield

./: .collision-pass-link  .contract-deps.sha256  .contract.sha256  .gitignore  ACCEPTANCE.md  AGENTS.md  ANIMATION_AUDIT.md  ANIMATION_AUDIT_INDEX.md  ANIMATION_CODE_LOCATIONS.md  AUDIT_README.md  CLAUDE.md  CRITICAL_BUGS_FIXES.md  Cargo.toml  GAME_SPEC.md  HEARTHFIELD_2_PLAN.md  MANIFEST.md  OPERATING_KERNEL.md  ORCHESTRATOR_STATE.md  PLAYER_EXPERIENCE_PLAN.md  PR_LINK_REQUEST.md  ROADMAP_TO_SHIP.md  THE_MODEL_IS_THE_ORCHESTRATOR.md  UPGRADE_STRATEGY.md  build_wasm.sh  index.html  update_presets.py
.cargo/: config.toml
.claude/: settings.json
.memory/: README.md  STATE.md  principle-world-tileset-silent-overflow.yaml  principle-world-visual-mapping-blindness.yaml
.playwright-cli/: page-2026-03-11T02-31-48-209Z.yml
city_office_worker_dlc/: CONTRACT.md  Cargo.toml  DECISIONS.md  STATUS.md  TASKS.md  TODO.md
city_office_worker_dlc/research/: rotation_ledger.md
city_office_worker_dlc/src/: main.rs
city_office_worker_dlc/src/game/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
city_office_worker_dlc/src/game/save/: mod.rs
city_office_worker_dlc/src/game/systems/: bootstrap.rs  day_cycle.rs  interruptions.rs  mod.rs  task_board.rs  tasks.rs  tests.rs  visuals.rs
city_office_worker_dlc/tools/: scope_guard.sh
dlc/police/: .contract.sha256  .gitignore  Cargo.toml  MANIFEST.md  build_wasm.sh
dlc/police/docs/: deep-thought-prompt.md  spec.md  sprite-mapping-base-game.md
dlc/police/docs/domains/: art-mapping.md  calendar.md  cases.md  economy.md  evidence.md  npcs.md  patrol.md  player.md  precinct.md  save.md  skills.md  ui.md  world.md
dlc/police/objectives/: orchestrator-template.md  wave1-calendar.md  wave1-player.md  wave1-ui.md  wave1-world.md  wave2-cases.md  wave2-evidence.md  wave2-patrol.md  wave2-precinct.md  wave3-economy.md  wave3-npcs.md  wave3-skills.md  wave4-save.md  wave5-events-ui.md  wave6-art.md  wave7-audio.md  wave8-content.md  wave9-wasm.md
dlc/police/scripts/: clamp-scope.sh  run-gates.sh
dlc/police/src/: main.rs
dlc/police/src/domains/: mod.rs
dlc/police/src/domains/calendar/: mod.rs
dlc/police/src/domains/cases/: content.rs  mod.rs
dlc/police/src/domains/economy/: mod.rs
dlc/police/src/domains/evidence/: mod.rs
dlc/police/src/domains/npcs/: mod.rs
dlc/police/src/domains/patrol/: mod.rs
dlc/police/src/domains/player/: mod.rs
dlc/police/src/domains/precinct/: mod.rs
dlc/police/src/domains/save/: mod.rs
dlc/police/src/domains/skills/: mod.rs
dlc/police/src/domains/ui/: audio.rs  mod.rs  notifications.rs  screens.rs
dlc/police/src/domains/world/: mod.rs
dlc/police/src/shared/: mod.rs
dlc/police/status/workers/: art-audit.md  cross-session-debrief-combined.md  cross-session-debrief.md  deep-thought-answers.md  event-connectivity-audit.md  final-miracle-audit.md  first-60-seconds-audit.md  player-journey-audit.md  spec-gap-analysis.md  wave1-audit.md  wave3-scope.md
dlc/police/web/: index.html
docs/: BOUNDED_LANE_FLOW.md  CHECKPOINT_TRANSACTION.md  CONSTITUTION.md  CONTENT_EXPANSION_DISPATCH.md  COPILOT_DISPATCH_RECIPE.md  DOC_STACK.md  HEARTHFIELD_BASE_GAME_RECONSTRUCTION_SPEC.md  HEARTHFIELD_BUILD_METHODOLOGY.md  HEARTHFIELD_OPERATING_KERNEL.md  HEARTHFIELD_REPLICATION_TARGET_SPEC.md  Hearthfield-Current-Audit.md  LAUNCH_TRANSACTION.md  ORCHESTRATION_PRIMITIVE_SYNTHESIS.md  ORCHESTRATION_TOPOLOGY.md  Operational-Procedures.md  QUICK_START.md  SUBAGENT_PLAYBOOK.md  Sub-Agent-Playbook-v4-FINAL.md  Sub-Agent-Playbook-v5-FINAL.md  THREE_PRINCIPLES_OF_ORCHESTRATED_BUILDS.md  The-Three-Principles.md  UNIVERSAL_GAME_KERNEL.md  UNIVERSAL_SOFTWARE_KERNEL.md  interior_contract.md  map_transition_edge_cases.md  operational-procedures.md  sailing_spec.md  spec.md  sprite-orchestration-dispatch.md  sprite_graphics_logic.md  sub-agent-playbook-v4-additions.md  three-principles.md
objectives/: TEMPLATE.md  add-journal-screen.md  add-map-screen.md  add-relationships-screen.md  animal_shop.md  animals.md  animals_sprites_wave8.md  calendar.md  (+93 more)
(+606 files in other folders)
