[package]
name = "hearthfield"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
ron = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
# Note: strip=true removes wasm-bindgen custom sections; do NOT enable for WASM
