[package]
name = "city_office_worker_dlc"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_state",
    "multi_threaded",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "bevy_winit",
    "x11",
    "png",
    "default_font",
] }
