[package]
name = "precinct"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_state",
    "multi_threaded",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "bevy_winit",
    "x11",
    "bevy_audio",
    "vorbis",
    "png",
    "webgl2",
    "default_font",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
ron = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3.91", features = ["Window", "Storage"] }
